# social-media-helper

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  PLAN.md  README.md  WORKSPACE
.github/workflows/: ci.yml  release.yml
android/: BUILD.bazel  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/socialhelper/: ApiClient.kt  DigestActivity.kt  FeedAdapter.kt  FeedViewModel.kt  MainActivity.kt  Models.kt
android/app/src/main/res/drawable/: bg_category_chip.xml
android/app/src/main/res/layout/: activity_digest.xml  activity_main.xml  item_feed.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/java/com/socialhelper/: ModelsTest.kt
android/gradle/: libs.versions.toml
android/scripts/: gradle_build.sh
backend/: .env.example  BUILD.bazel  Dockerfile  docker-compose.yml  requirements.txt
backend/mcp_server/: config.py  main.py
backend/mcp_server/api/: routes.py
backend/mcp_server/feeds/: __init__.py  base.py  hackernews.py  onet.py  rss_reader.py  social.py
backend/mcp_server/mcp/: tools.py
backend/mcp_server/processing/: __init__.py  categorizer.py  deduplicator.py  scorer.py  summarizer.py
backend/tests/: test_feeds.py  test_processing.py  test_social_feeds.py
